<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:id="@+id/Background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/background_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="15:10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_main"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.65" />

        <ImageView
            android:id="@+id/k9_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/k9"
            android:src="@drawable/k9_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/startButton"
            app:layout_constraintHeight_percent="1.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/komu_a_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/k9"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:visibility="invisible"
            app:autoSizeMaxTextSize="300sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"
            app:layout_constraintWidth_percent="0.4"
            tools:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/komu_a_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/k9"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            app:autoSizeMaxTextSize="300sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@id/textView"
            app:layout_constraintWidth_percent="0.4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/komu_a_regular"
            android:gravity="bottom|center_horizontal"
            android:maxLines="1"
            android:text="@string/interactive"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            app:autoSizeMaxTextSize="72sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/rounded_button_bg"
            android:fontFamily="@font/komu_a_regular"
            android:gravity="center_horizontal|fill_vertical"
            android:insetTop="0dp"
            android:text="@string/start"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/rounded_button_text"
            android:textStyle="normal"
            android:typeface="normal"
            app:autoSizeMaxTextSize="90sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.14"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintWidth_percent="0.28"
            app:strokeColor="#BEBFC3"
            app:strokeWidth="6dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
