<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:id="@+id/Background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/background_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="15:10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/label1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_weight="1.8"
                android:background="@drawable/control_button_background"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/fire_image_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/k9_laser_main"
                    android:duplicateParentState="true"
                    app:layout_constraintBottom_toTopOf="@+id/fire_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fire_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fontFamily="@font/komu_a_regular"
                    android:gravity="center"
                    android:text="@string/fire"
                    android:textColor="@color/rounded_button_text"
                    android:duplicateParentState="true"
                    android:textStyle="normal"
                    app:autoSizeMaxTextSize="1000dp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.3"
                    app:layout_constraintTop_toBottomOf="@+id/fire_image_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/label2"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.8"
                android:backgroundTint="@color/rounded_button_bg"
                android:fontFamily="@font/komu_a_regular"
                android:text="@string/voices"
                android:textColor="@color/rounded_button_text"
                android:textStyle="normal"
                app:autoSizeMaxTextSize="1000dp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="24dp"
                app:strokeColor="#99FFFFFF"
                app:strokeWidth="6dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backToStart"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/rounded_button_bg"
                android:fontFamily="@font/komu_a_regular"
                android:text="@string/back_to_options"
                android:textColor="@color/rounded_button_text"
                android:textStyle="normal"
                app:autoSizeMaxTextSize="1000dp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="24dp"
                app:strokeColor="#99FFFFFF"
                app:strokeWidth="6dp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dpad_area"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.9"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/dpad_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/dpad" />

            <androidx.constraintlayout.widget.Guideline android:id="@+id/v1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" app:layout_constraintGuide_percent="0.3" />
            <androidx.constraintlayout.widget.Guideline android:id="@+id/v2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" app:layout_constraintGuide_percent="0.7" />
            <androidx.constraintlayout.widget.Guideline android:id="@+id/h1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" app:layout_constraintGuide_percent="0.3" />
            <androidx.constraintlayout.widget.Guideline android:id="@+id/h2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" app:layout_constraintGuide_percent="0.7" />

            <Button android:id="@+id/dpadUp" android:layout_width="0dp" android:layout_height="0dp" android:background="@android:color/transparent" app:layout_constraintBottom_toTopOf="@+id/h1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <Button android:id="@+id/dpadDown" android:layout_width="0dp" android:layout_height="0dp" android:background="@android:color/transparent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/h2" />
            <Button android:id="@+id/dpadLeft" android:layout_width="0dp" android:layout_height="0dp" android:background="@android:color/transparent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/v1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <Button android:id="@+id/dpadRight" android:layout_width="0dp" android:layout_height="0dp" android:background="@android:color/transparent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/v2" app:layout_constraintTop_toTopOf="parent" />
            <Button android:id="@+id/dpadStop" android:layout_width="0dp" android:layout_height="0dp" android:background="@android:color/transparent" app:layout_constraintBottom_toBottomOf="@+id/h2" app:layout_constraintEnd_toEndOf="@+id/v2" app:layout_constraintStart_toStartOf="@+id/v1" app:layout_constraintTop_toTopOf="@+id/h1" />

            <View
                android:id="@+id/dpadCenterBlackout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/black_circle"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/h2"
                app:layout_constraintEnd_toEndOf="@+id/v2"
                app:layout_constraintStart_toStartOf="@+id/v1"
                app:layout_constraintTop_toTopOf="@+id/h1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
